--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
+    "mongodb": "^6.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "^4.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
