--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.475.0",
     "mongodb": "^6.13.0",
     "react": "^19.0.0",
